css/style.css
/* ... */
input[type=range]::-ms-fill-upper {
	background: #3071a9;
	border: 1px solid #FFF;
	border-radius: 2.6px;
	box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
}

/* WRAPPER */
#wrapper {
	display: flex;
	max-width: 100%;
}

.desktop #wrapper {
	max-height: 100%;
	flex-direction: row;
}

.mobile #wrapper {
	flex-direction: column;
}

/* MAP */
#mapscreen {
	line-height: 0;
	height: 100%;
	position: relative;
}
#mapscreen * {
	line-height: 1.15;
}
#map {
	position: relative;
}
#mapscreen #bg {
	max-height: 100%;
	width: auto;
	display: block;
}
.map_icon {
	width: 32px;
	height: 32px;
	margin-top: -16px;
	margin-left: -16px;
	position: absolute;
}
.map_icon.flash {
	-webkit-filter: grayscale(100%) brightness(40%) sepia(100%) hue-rotate(-50deg) saturate(600%) contrast(0.8);
	filter: grayscale(100%) brightness(40%) sepia(100%) hue-rotate(-50deg) saturate(600%) contrast(0.8);
}
.map_icon.clickable {
	cursor: pointer;
}
.map_icon_mute {
	width: 24px;
	height: 24px;
	margin-top: -12px;
	margin-left: -12px;
	position: absolute;
	pointer-events: none;
}
#mini_notif {
	background-color: #000;
	border: 1px solid #CC212C;
	position: absolute;
	color: white;
	padding: 5px;
	margin: 5px;
	width: 400px;
	max-width: calc(100% - 10px);
	top: 15px;
	left: 50%;
	transform: translate(calc(-50% - 5px), 0);
	text-align: center;
}
.desktop #options {
	background-color: #000;
	border: 1px solid #CC212C;
	position: absolute;
	color: white;
	padding: 5px;
	width: 150px;
	height: 75px;
	top: calc(100% - 100px);
	left: calc(100% - 175px);
}
.desktop #options button {
	height: 29px;
	padding: 5px 3px 5px 3px;
}
.desktop #options button.toggle {
	width: 100%;
	margin-bottom: 5px;
}
.desktop #options button.audio, .desktop #options button.setup {
	width: calc(50% - 2.5px);
}
.mobile  #options {
	margin: 5px 5px 0 5px;
	background-color: #FFF;
	padding: 5px;
	border: 1px solid #000;
}
.mobile #options button {
	width: calc((100% - 10px) / 3);
}

#overlay {
	background-color: #000;
	opacity: 0.75;
	height: 50rem;
	width: 50rem;
	position: absolute;
	display: none;
	top: 0;
	left: 0;
}
#notification {
	margin: 5px;
	background-color: #000;
	border: 1px solid #CC212C;
	position: absolute;
	min-height: 200px;
	display: none;
}
#notification {
	width: 600px;
	max-width: calc(100% - 10px);
	max-height: 80vh;
	/* Center a div of unknown width */
	top: 50%;
	left: 50%;
	transform: translate(calc(-50% - 5px), calc(-50% - 5px));
}
#notification > div {
	height: 100%;
	min-height: 200px;
	display: flex;
	flex-flow: column;
}
#notification .heading {
	width: 100%;
	height: 30px;
	background-color: #1B1B1B;
	padding-left: 5px;
}
#notification .heading h1 {
	font-size: 1.5em;
	color: #FFF;
}
#notification .main {
	flex: 1;
	padding-left: 5px;
	padding-right: 5px;
	overflow-y: auto;
	max-height: 80vh;
}
#notification .main h1 {
	padding-top: 3px;
	font-size: 1.3em;
	color: #FFF;
}
#notification .indent {
	padding-left: 10px;
}
#notification h2 {
	font-size: 1.2em;
	padding-top: 5px;
	color: #FFF;
}
#notification p {
	padding-top: 5px;
	color: #FFF;
	font-size: 1em;
}
#notification ul {
	margin-left: 30px;
	color: #FFF;
}
#notification li {
	padding: 5px 0 0 0;
	color: #FFF;
	font-size: 1em;
}
#notification th, #notification td {
	padding: 0 5px 0 0;
	color: #FFF;
}
#notification td:first-child {
	padding: 0 8px 0 0;
	/*vertical-align: top;*/
}
#notification .buttons {
	padding: 5px;
	margin: auto;
}
#notification .buttons .button {
	min-width: 100px;
}
#mainSetup .audioFreq span,#mainSetup .audioVolume span {
	vertical-align: top;
	margin: 10px 0 0 8px;
	display: inline-block;
}
#notification .main button, #notification .main input {
	margin-top: 5px;
}
#notification td:first-child {
	vertical-align: top;
	padding-top: 10px;
}
#notification .incDecButtons button {
	margin-top: 0;
}

#nightclubGUI th, #nightclubGUI td {
	text-align: left;
}
.incDecButtons input, .incDecButtons .button {
	border: 1px solid #FFF;
	background-color: #000;
	color: #FFF;
    display: inline-block;
    padding: 5px 5px;
    border-radius: 0;
	height: 30px;
    -webkit-appearance: none;
	vertical-align: bottom;
	margin: 0;
}
.incDecButtons input {
	-moz-appearance: textfield;
}
.incDecButtons .button {
	font-size: 16px;
}
.incDecButtons input {
	border-left: 0;
	border-right: 0;
	width: 60px;
	text-align: center;
}
#nightclubGUI td {
	vertical-align: middle;
}
#nightclubGUI td:last-child {
	font-size: 0;
}
.setupGUI label {
	color: #FFF;
}
.setupGUI tr td:first-child {
	text-align: right;
	min-width: 100px;
}
#nightclubGUI table {
	width: 100%;
}
.onechoice .button {
	opacity: 0.60;
}
.onechoice .button:disabled {
	opacity: 1;
}
#nightclubSetupGUI td:first-child {
	width: 112px;
}
.button.off {
	opacity: 0.60;
}

/* INFO */
#infotab {
	padding: 5px;
	overflow-y: auto;
}
.desktop #infotab {
	max-height: 100vh;
}
.desktop #infotab {
	width: 220px;
}

.information {
	border: 1px solid black;
	padding: 5px;
	width: 100%;
	margin-bottom: 5px;
}
.information:last-child {
	margin-bottom: 0;
}
@-moz-document url-prefix() {
    .information:last-child {
        margin-bottom: 5px;
    }
}
.business-section {
	width: 100%;
}
#inactiveBusinesses {
	margin-top: 5px;
}
.business_heading {
	margin-bottom: 3px;
}
.business_heading * {
	float: left;
	display: block;
}
.clearfix::after {
	content: "";
	clear: both;
	display: table;
}
.icon {
	width: 25px;
	height: 25px;
	margin-right: 5px;
}
.business_heading h1 {
	padding-top: 3px;
}
#infotab button.setup {
	background-color: #FFF;
	color: #000;
	height: 25px;
	border-radius: 3px;
	padding: 2px 6px 3px 6px;
	float: right;
}
#infotab td  {
	padding-bottom: 5px;
	vertical-align: top;
}
#infotab td:first-child {
	width: 60px;
}
#infotab td > span {
	display: block;
	line-height: 1em;
	font-size: 0.8em;
}
.progress_bar {
	border: 1px solid black;
	width: 125px;
	height: 12px;
	position: relative;
	line-height: 1em;
}
.progress_bar .fivetick {
	top: -3px;
	left: -1px;
	position: absolute;
	width: 125px;
	height: 12px;
}
/* ... */

